mariadb-deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mariadb-edu00
  labels:
    app: mariadb
    type: database
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mariadb
        type: database
    spec:
      volumes:
      - name: configmap-test
        configMap:
          name: configmap-edu00
      containers:
      - name: mariadb
        image: mariadb
        ports:
        - containerPort: 3306
          name: db-port        
        volumeMounts:
        - name: configmap-test
          mountPath: /root/
